Fixed the overflow to fit the box height. Also set it to Auto instead of scroll, as it fits better with the page.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,7 +54,7 @@ form input { border: 0; padding: 10px; width: 85%; margin-right: .5%; }
 form button { width: 11%; background: rgb(130, 224, 255); border: none; padding: 10px; }
 
 
-
+#messages {height: 390px; overflow: auto;} /* Css is awesome */
 #messages { list-style-type: none; margin: 0; padding: 0; }
 #messages li { padding: 5px 10px; }
 #messages li:nth-child(odd) { background: #eee; }
